2003-12-21  Schloegl Alois  <alois.schloegl@tugraz.at>

	* miscellaneous/fullfile.m: If filename is empty, set it to "."
	before continuing.

	* miscellaneous/fileparts.m: Allow name to start with ".".

2003-12-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/ind2sub.m: New file.
	* general/sub2ind.m: New file.

2003-12-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/system/zp2ss.m: Don't save and restore
	warn_empty_list_elements.

2003-12-15  Gabriele Pannocchia  <g.pannocchia@ing.unipi.it>

        * control/system/zp2ss.m: Correct definition of pure gain system.

2003-12-10  Quentin Spencer  <qspencer@ieee.org>

	* statistics/base/mean.m: Remove special case for row vectors.

2003-11-19  Quentin Spencer  <qspencer@ieee.org>

	* signal/freqz_plot.m: Save and restore automatic_replot too.

2003-11-18  Danilo Piazzalunga  <danilopiazza@libero.it>

	* statistics/base/iqr.m: Handle matrices.

2003-11-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/issymmetric.m: Don't fail if norm (x) == 0.

2003-11-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/path.m: Fix thinko in previous change.

2003-11-14  Gabriele Pannocchia  <g.pannocchia@ing.unipi.it>

	* control/base/dare.m: Check positive (semi)definiteness and
	dimensions of r (and q). 
	* control/base/dlqr.m: Check stabilizability of (A,B),
	detectability of (A,Q), and whether (A,Q) has non minimal modes
	near unit circle.

	* control/system/is_detectable.m: Use Hautus Lemma.
	Correct the behavior for discrete-time systems.
	* control/system/is_stabilizable.m: Likewise.

	* linear-algebra/krylov.m: Return H = [] in Vnrm == 0 case.

	* linear-algebra/krylovb.m: Fix typo in usage message.

	* general/isdefinite.m: New function.

2003-10-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/reshape: Delete.

2003-10-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* general/numel.m: Delete.

2003-10-15  John W. Eaton  <jwe@bevo.che.wisc.edu>
